--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/IgorRozani/EstudoAngularNode/issues"
   },
-  "homepage": "https://github.com/IgorRozani/EstudoAngularNode#readme"
+  "homepage": "https://github.com/IgorRozani/EstudoAngularNode#readme",
+  "dependencies": {
+    "angular": "^1.5.7",
+    "angular-resource": "^1.5.7",
+    "angular-route": "^1.5.7",
+    "bootstrap": "^3.3.6",
+    "express": "^4.14.0"
+  }
 }
