Mudando para licença MIT

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "JavaScript"
   ],
   "author": "Igor Gustavo Oliveira Rozani",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/IgorRozani/EstudoAngularNode/issues"
   },
